# cppbackend

.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/data/: config.json
sprint1/problems/map_json/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/src/: tcp_client.cpp  tcp_server.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: application.cpp  application.h  application_support.h  http_server.cpp  http_server.h  json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/game_state/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/game_state/solution/src/: application.cpp  application.h  http_server.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/join_game/solution/src/: http_server.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/logger/solution/: CMakeLists.txt  main.cpp  my_logger.cpp  my_logger.h
sprint2/problems/monitoring/: prometheus.yml
sprint2/problems/move_players/solution/src/: application.cpp  application.h  json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/src/: http_server.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: application.cpp  application.h  http_req_resp_support.cpp  http_req_resp_support.h  http_server.h  json_loader.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/src/: application.cpp  collision_detector.cpp  loot_generator.h  main.cpp  model.cpp  model.h
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: collision_detection_tests  conanbuildinfo.txt  conanbuildinfo_multi.cmake  graph_info.json
sprint3/problems/gather-tests/solution/src/: collision_detector.cpp
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gather/solution/: .gitignore  conanbuildinfo_release.cmake  conaninfo.txt
sprint3/problems/gather/solution/src/: collision_detector.cpp
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/src/: application.cpp  json_loader.cpp  request_handler.cpp
sprint3/problems/gen_objects/solution/tests/: model-tests.cpp
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/load/solution/: load.yaml
sprint3/problems/scores/solution/: Dockerfile
sprint3/problems/scores/solution/src/: application.cpp  application.h  application_support.cpp  application_support.h  collision_detector.h  http_req_resp_support.h  http_server.cpp  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: model.cpp  model.h
sprint3/problems/static_lib/solution/tests/: model-tests.cpp
sprint3/problems/tv/solution/src/: controller.h  tv.h
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/src/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-2/solution/src/domain/: author.h
sprint4/problems/bookypedia-2/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-2/solution/src/ui/: view.cpp  view.h
sprint4/problems/bookypedia-2/solution/tests/: use_case_tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/src/: main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
(+39 files in other folders)
